--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Visor AR Personalizado</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        .header {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 50vh; /* La mitad de la altura de la pantalla */
+            background: #000;
+            display: flex;
+            justify-content: center; /* Centrado horizontal */
+            align-items: center;    /* Centrado vertical */
+            z-index: 100;
+            transition: transform 0.
         transition: transform 0.3s ease;
         }
         .header.hidden {
