--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
             padding: 0;
             overflow: hidden;
         }
-        .header {
+        .image-container {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh; /* La mitad de la altura de la pantalla */
-            background: #000;
+            height: 100vh; /* Ocupa toda la pantalla */
             display: flex;
-            justify-content: center; /* Centrado horizontal */
-            align-items: center;    /* Centrado vertical */
+            justify-content: center; /* Centrar horizontalmente */
+            align-items: center;    /* Centrar verticalmente */
             z-index: 100;
-            transition: transform 0.
-        transition: transform 0.3s ease;
+            background: #fff; /* Opcional: Color de fondo */
         }
-        .header.hidden {
-            transform: translateY(-100%);
+        .image-container img {
+            max-width: 100%; /* Ajuste automático al ancho */
+            max-height: 100%; /* Ajuste automático a la altura */
+            object-fit: contain; /* Mantener proporciones */
         }
         iframe {
             display: block;
@@ -33,16 +33,11 @@
             height: 100vh;
             border: none;
         }
-        .header img {
-            max-width: 90%; /* Ajustar el ancho máximo */
-            max-height: 90%; /* Ajustar la altura máxima */
-            object-fit: contain; /* Asegurar que la imagen se ajuste sin distorsión */
-        }
     </style>
 </head>
 <body>
-    <div class="header" id="header">
-        <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Mi Marca">
+    <div class="image-container" id="imageContainer">
+        <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Imagen">
     </div>
     <iframe 
         src="https://mywebar.com/p/Project_10_fntso1carf" 
@@ -51,9 +46,9 @@
     </iframe>
 
     <script>
-        // Ocultar la cabecera después de 8 segundos
+        // Ocultar la imagen después de 8 segundos
         setTimeout(function() {
-            document.getElementById('header').classList.add('hidden');
+            document.getElementById('imageContainer').style.display = 'none';
         }, 8000);  // 8000 milisegundos = 8 segundos
     </script>
 </body>
