--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            background-color: #fff; /* Fondo blanco */
         }
         .image-container {
             position: absolute;
@@ -17,15 +18,15 @@
             width: 100%;
             height: 100vh; /* Ocupa toda la pantalla */
             display: flex;
-            justify-content: center; /* Centrar horizontalmente */
-            align-items: center;    /* Centrar verticalmente */
+            justify-content: center; /* Centrado horizontal */
+            align-items: center;    /* Centrado vertical */
             z-index: 100;
-            background: #fff; /* Opcional: Color de fondo */
+            background: #fff; /* Fondo blanco */
         }
         .image-container img {
-            max-width: 100%; /* Ajuste automático al ancho */
-            max-height: 100%; /* Ajuste automático a la altura */
-            object-fit: contain; /* Mantener proporciones */
+            max-width: 100%; /* Se ajusta al ancho del dispositivo */
+            max-height: 100%; /* Se ajusta a la altura del dispositivo */
+            object-fit: cover; /* Cubre el espacio disponible sin distorsionar */
         }
         iframe {
             display: block;
@@ -37,7 +38,7 @@
 </head>
 <body>
     <div class="image-container" id="imageContainer">
-        <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Imagen">
+        <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
     </div>
     <iframe 
         src="https://mywebar.com/p/Project_10_fntso1carf" 
@@ -49,7 +50,7 @@
         // Ocultar la imagen después de 8 segundos
         setTimeout(function() {
             document.getElementById('imageContainer').style.display = 'none';
-        }, 8000);  // 8000 milisegundos = 8 segundos
+        }, 8000); // 8000 milisegundos = 8 segundos
     </script>
 </body>
 </html>
