--- a/index.html
+++ b/index.html
@@ -9,24 +9,20 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #fff; /* Fondo blanco */
         }
-        .image-container {
+        .image-overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100vh; /* Ocupa toda la pantalla */
-            display: flex;
-            justify-content: center; /* Centrado horizontal */
-            align-items: center;    /* Centrado vertical */
             z-index: 100;
-            background: #fff; /* Fondo blanco */
+            pointer-events: none; /* Permite clics e interacciones con el contenido detrás */
         }
-        .image-container img {
-            max-width: 100%; /* Se ajusta al ancho del dispositivo */
-            max-height: 100%; /* Se ajusta a la altura del dispositivo */
-            object-fit: cover; /* Cubre el espacio disponible sin distorsionar */
+        .image-overlay img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ajusta la imagen sin distorsionarse */
         }
         iframe {
             display: block;
@@ -37,20 +33,16 @@
     </style>
 </head>
 <body>
-    <div class="image-container" id="imageContainer">
+    <!-- Imagen superpuesta -->
+    <div class="image-overlay">
         <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
     </div>
+
+    <!-- Visor AR -->
     <iframe 
         src="https://mywebar.com/p/Project_10_fntso1carf" 
         id="arViewer"
         allow="camera;gyroscope;accelerometer;magnetometer;xr-spatial-tracking;microphone;">
     </iframe>
-
-    <script>
-        // Ocultar la imagen después de 8 segundos
-        setTimeout(function() {
-            document.getElementById('imageContainer').style.display = 'none';
-        }, 8000); // 8000 milisegundos = 8 segundos
-    </script>
 </body>
 </html>
