--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover; /* Ajusta la imagen sin distorsionarse */
+            object-position: center top; /* Ajusta la posición de la imagen (modifica esto según sea necesario) */
         }
         iframe {
             display: block;
