--- a/index.html
+++ b/index.html
@@ -17,13 +17,22 @@
             width: 100%;
             height: 100vh; /* Ocupa toda la pantalla */
             z-index: 100;
+            background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             pointer-events: none; /* Permite clics e interacciones con el contenido detrás */
+            transition: opacity 1s ease;
+        }
+        .image-overlay.hidden {
+            opacity: 0;
+            pointer-events: none;
         }
         .image-overlay img {
             width: 100%;
             height: 100%;
             object-fit: cover; /* Ajusta la imagen sin distorsionarse */
-            object-position: center top; /* Ajusta la posición de la imagen (modifica esto según sea necesario) */
+            object-position: center top; /* Ajusta la posición de la imagen */
         }
         iframe {
             display: block;
@@ -35,7 +44,7 @@
 </head>
 <body>
     <!-- Imagen superpuesta -->
-    <div class="image-overlay">
+    <div class="image-overlay" id="imageOverlay">
         <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
     </div>
 
@@ -45,5 +54,18 @@
         id="arViewer"
         allow="camera;gyroscope;accelerometer;magnetometer;xr-spatial-tracking;microphone;">
     </iframe>
+
+    <script>
+        // Detecta cuándo el usuario acepta los permisos y ejecuta la lógica
+        const iframe = document.getElementById('arViewer');
+        const imageOverlay = document.getElementById('imageOverlay');
+
+        iframe.addEventListener('load', () => {
+            // Espera 8 segundos después de que se cargue el visor y desaparece la imagen
+            setTimeout(() => {
+                imageOverlay.classList.add('hidden');
+            }, 8000); // 8000 milisegundos = 8 segundos
+        });
+    </script>
 </body>
 </html>
