Update index.html Finall

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <!-- Imagen superpuesta -->
     <div class="image-overlay" id="imageOverlay">
-        <img src="https://www.dropbox.com/scl/fi/73xnwgzaj4wfaz6z426x2/Portada-2-final.png?rlkey=pxkp5pwwf9sxrv2yblw7gnxsk&st=bdeq21pi&dl=0" alt="Portada">
+        <img src="https://www.dropbox.com/scl/fi/73xnwgzaj4wfaz6z426x2/Portada-2-final.png?rlkey=pxkp5pwwf9sxrv2yblw7gnxsk&st=bdeq21pi&dl=0" alt="Portada-2-final">
     </div>
 
     <!-- Visor AR -->
