--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         }
         .image-overlay img {
             width: 100%;
-            height: auto;
-            max-height: 100vh; /* Ajusta la altura máxima para que se ajuste a la pantalla */
+            height: 100%; /* Ajusta para que ocupe exactamente la pantalla */
             object-fit: cover; /* Asegura que la imagen no se deforme */
             object-position: top; /* Ajusta la posición de la imagen */
         }
