--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         }
         .image-overlay img {
             width: 100%;
-            height: 100%; /* Ajusta para que ocupe exactamente la pantalla */
+            height: 100vh; /* Ajusta para que ocupe exactamente la pantalla */
             object-fit: cover; /* Asegura que la imagen no se deforme */
-            object-position: top; /* Ajusta la posición de la imagen */
+            object-position: center; /* Centra la imagen */
         }
         iframe {
             display: block;
