--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            height: 100vh; /* Para asegurar que todo ocupe la pantalla completa */
         }
         .image-overlay {
             position: absolute;
@@ -17,12 +20,12 @@
             width: 100%;
             height: 100vh; /* Ocupa toda la pantalla visible */
             z-index: 100;
-            pointer-events: none; /* Permite interacciones con elementos detrás, como el botón "Launch" */
+            pointer-events: none; /* Permite interacciones con elementos detrás */
         }
         .image-overlay img {
             width: 100%;
-            height: 100vh; /* Ajusta para que ocupe exactamente la pantalla */
-            object-fit: cover; /* Asegura que la imagen no se deforme */
+            height: 100%; /* Ocupa toda la altura disponible */
+            object-fit: cover; /* Asegura que la imagen llene todo sin deformarse */
             object-position: center; /* Centra la imagen */
         }
         iframe {
