--- a/index.html
+++ b/index.html
@@ -55,22 +55,23 @@
     </iframe>
 
     <script>
-        // Detecta cuándo el visor está listo y la cámara está activa
-        const iframe = document.getElementById('arViewer');
         const imageOverlay = document.getElementById('imageOverlay');
+        const iframe = document.getElementById('arViewer');
 
-        // Monitorea mensajes desde el iframe
-        window.addEventListener('message', (event) => {
-            // Verifica si el mensaje indica que la cámara está activa
-            if (event.data === 'camera-activated') {
-                // Oculta la superposición
-                imageOverlay.classList.add('hidden');
-            }
-        });
-
-        // Envía un mensaje al iframe para que active la cámara
+        // Verifica permisos de cámara automáticamente
         iframe.addEventListener('load', () => {
-            iframe.contentWindow.postMessage('check-camera-status', '*');
+            // Intenta detectar cambios en permisos
+            navigator.permissions.query({ name: 'camera' }).then(permissionStatus => {
+                if (permissionStatus.state === 'granted') {
+                    imageOverlay.classList.add('hidden');
+                } else {
+                    permissionStatus.onchange = () => {
+                        if (permissionStatus.state === 'granted') {
+                            imageOverlay.classList.add('hidden');
+                        }
+                    };
+                }
+            });
         });
     </script>
 </body>
