--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            height: 100vh; /* Asegura que el contenido ocupe toda la pantalla */
+            height: 100vh; /* Asegura que ocupe toda la pantalla */
         }
         .image-overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh; /* Ocupa toda la pantalla visible */
+            height: 100vh; /* Ocupa toda la pantalla */
             z-index: 100;
             pointer-events: none; /* Permite interacciones con elementos detrás */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: black; /* Fondo negro para un mejor efecto */
         }
         .image-overlay img {
-            width: 100%;
-            height: 100%; /* Ocupa toda la altura disponible */
-            object-fit: cover; /* Asegura que la imagen llene todo sin deformarse */
-            object-position: center; /* Centra la imagen */
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* Evita deformaciones y mantiene la relación de aspecto */
         }
         iframe {
             display: block;
@@ -51,26 +54,31 @@
     <iframe 
         src="https://mywebar.com/p/Project_10_fntso1carf" 
         id="arViewer"
-        allow="camera;gyroscope;accelerometer;magnetometer;xr-spatial-tracking;microphone;">
+        allow="camera; gyroscope; accelerometer; magnetometer; xr-spatial-tracking; microphone;">
     </iframe>
 
     <script>
-        const imageOverlay = document.getElementById('imageOverlay');
         const iframe = document.getElementById('arViewer');
+        const imageOverlay = document.getElementById('imageOverlay');
 
-        // Detecta interacción dentro del iframe
-        iframe.addEventListener('load', () => {
-            const iframeDocument = iframe.contentWindow || iframe.contentDocument;
-            if (iframeDocument) {
-                // Espera cualquier clic o toque dentro del iframe
-                iframe.contentWindow.addEventListener('click', () => {
-                    imageOverlay.classList.add('hidden');
-                });
-
-                iframe.contentWindow.addEventListener('touchstart', () => {
+        // Función para detectar cambios de visibilidad
+        document.addEventListener('visibilitychange', () => {
+            if (document.visibilityState === 'hidden') {
+                // Si la pestaña se oculta, es probable que el usuario haya aceptado permisos
+                requestAnimationFrame(() => {
                     imageOverlay.classList.add('hidden');
                 });
             }
+        });
+
+        // Evento de carga del iframe
+        iframe.addEventListener('load', () => {
+            // Agregar una verificación por si el visor ya está listo
+            setTimeout(() => {
+                if (!imageOverlay.classList.contains('hidden')) {
+                    imageOverlay.classList.add('hidden');
+                }
+            }, 10000); // Tiempo de espera adicional por si se demora en cargar
         });
     </script>
 </body>
