--- a/index.html
+++ b/index.html
@@ -20,16 +20,29 @@
             width: 100%;
             height: 100vh; /* Ocupa toda la pantalla */
             z-index: 100;
-            pointer-events: none; /* Permite interacciones con elementos detrás */
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: black; /* Fondo negro para un mejor efecto */
+            background-color: black; /* Fondo negro para un mejor efecto visual */
         }
         .image-overlay img {
             max-width: 100%;
             max-height: 100%;
             object-fit: contain; /* Evita deformaciones y mantiene la relación de aspecto */
+        }
+        .hide-button {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 101;
         }
         iframe {
             display: block;
@@ -40,14 +53,15 @@
         .image-overlay.hidden {
             opacity: 0;
             pointer-events: none;
-            transition: opacity 1s ease;
+            transition: opacity 0.5s ease;
         }
     </style>
 </head>
 <body>
-    <!-- Imagen superpuesta -->
+    <!-- Imagen superpuesta con botón para ocultar -->
     <div class="image-overlay" id="imageOverlay">
         <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
+        <button class="hide-button" id="hideButton">Iniciar Visor AR</button>
     </div>
 
     <!-- Visor AR -->
@@ -58,27 +72,12 @@
     </iframe>
 
     <script>
-        const iframe = document.getElementById('arViewer');
         const imageOverlay = document.getElementById('imageOverlay');
+        const hideButton = document.getElementById('hideButton');
 
-        // Función para detectar cambios de visibilidad
-        document.addEventListener('visibilitychange', () => {
-            if (document.visibilityState === 'hidden') {
-                // Si la pestaña se oculta, es probable que el usuario haya aceptado permisos
-                requestAnimationFrame(() => {
-                    imageOverlay.classList.add('hidden');
-                });
-            }
-        });
-
-        // Evento de carga del iframe
-        iframe.addEventListener('load', () => {
-            // Agregar una verificación por si el visor ya está listo
-            setTimeout(() => {
-                if (!imageOverlay.classList.contains('hidden')) {
-                    imageOverlay.classList.add('hidden');
-                }
-            }, 10000); // Tiempo de espera adicional por si se demora en cargar
+        // Evento para ocultar la imagen al hacer clic en el botón
+        hideButton.addEventListener('click', () => {
+            imageOverlay.classList.add('hidden');
         });
     </script>
 </body>
