--- a/index.html
+++ b/index.html
@@ -9,46 +9,54 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            height: 100vh; /* Ocupa toda la altura de la pantalla */
             display: flex;
-            flex-direction: column;
-            height: 100vh; /* Asegura que ocupe toda la pantalla */
+            justify-content: center;
+            align-items: center;
+        }
+        .container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+        iframe {
+            display: block;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
         .image-overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh; /* Ocupa toda la pantalla */
-            z-index: 100;
+            height: 100%;
+            background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: black; /* Fondo negro para un mejor efecto visual */
+            z-index: 100; /* Se asegura de estar por encima del iframe */
+            pointer-events: none; /* Permite interacción con el botón */
         }
         .image-overlay img {
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain; /* Evita deformaciones y mantiene la relación de aspecto */
+            object-fit: cover; /* Cubre toda la pantalla sin deformarse */
         }
         .hide-button {
             position: absolute;
             bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 12px 24px;
+            font-size: 18px;
             background-color: #007bff;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            z-index: 101;
-        }
-        iframe {
-            display: block;
-            width: 100%;
-            height: 100vh;
-            border: none;
+            z-index: 101; /* Encima de la imagen */
+            pointer-events: auto; /* Asegura que el botón sea clicable */
         }
         .image-overlay.hidden {
             opacity: 0;
@@ -58,18 +66,21 @@
     </style>
 </head>
 <body>
-    <!-- Imagen superpuesta con botón para ocultar -->
-    <div class="image-overlay" id="imageOverlay">
-        <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
+    <div class="container">
+        <!-- Visor AR -->
+        <iframe 
+            src="https://mywebar.com/p/Project_10_fntso1carf" 
+            id="arViewer"
+            allow="camera; gyroscope; accelerometer; magnetometer; xr-spatial-tracking; microphone;">
+        </iframe>
+
+        <!-- Imagen superpuesta con botón para ocultar -->
+        <div class="image-overlay" id="imageOverlay">
+            <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
+        </div>
+
         <button class="hide-button" id="hideButton">Iniciar Visor AR</button>
     </div>
-
-    <!-- Visor AR -->
-    <iframe 
-        src="https://mywebar.com/p/Project_10_fntso1carf" 
-        id="arViewer"
-        allow="camera; gyroscope; accelerometer; magnetometer; xr-spatial-tracking; microphone;">
-    </iframe>
 
     <script>
         const imageOverlay = document.getElementById('imageOverlay');
@@ -78,6 +89,7 @@
         // Evento para ocultar la imagen al hacer clic en el botón
         hideButton.addEventListener('click', () => {
             imageOverlay.classList.add('hidden');
+            hideButton.style.display = 'none'; // Oculta el botón después de hacer clic
         });
     </script>
 </body>
