--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
             z-index: 100; /* Se asegura de estar por encima del iframe */
-            pointer-events: none; /* Permite que el botón sea clicable */
+            background-color: rgba(0, 0, 0, 0.8); /* Oscurece el fondo para mejor contraste */
+            pointer-events: auto; /* Asegura que la superposición sea interactiva */
         }
         .image-overlay img {
             max-width: 100%;
             max-height: 100%;
-            object-fit: cover; /* Cubre toda la pantalla sin deformarse */
+            object-fit: contain; /* Asegura que la imagen se ajuste sin deformarse */
         }
         .hide-button {
             position: absolute;
