--- a/index.html
+++ b/index.html
@@ -9,90 +9,40 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            height: 100vh; /* Ocupa toda la altura de la pantalla */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-        }
-        iframe {
-            display: block;
-            width: 100%;
-            height: 100%;
-            border: none;
         }
         .image-overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            z-index: 100; /* Superposición por encima del iframe */
-            background-color: transparent; /* Elimina cualquier oscurecimiento */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            pointer-events: auto;
+            height: 100vh; /* Ocupa toda la pantalla */
+            z-index: 100;
+            pointer-events: none; /* Permite clics e interacciones con el contenido detrás */
         }
         .image-overlay img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Imagen a pantalla completa sin deformarse */
+            object-fit: cover; /* Ajusta la imagen sin distorsionarse */
         }
-        .loading-message {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 20px;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px 20px;
-            border-radius: 5px;
-            z-index: 102;
-            display: none;
-        }
-        .image-overlay.hidden {
-            opacity: 0;
-            pointer-events: none;
-            transition: opacity 0.5s ease;
+        iframe {
+            display: block;
+            width: 100%;
+            height: 100vh;
+            border: none;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Visor AR -->
-        <iframe 
-            src="https://mywebar.com/p/Project_10_fntso1carf" 
-            id="arViewer"
-            allow="camera; gyroscope; accelerometer; magnetometer; xr-spatial-tracking; microphone;">
-        </iframe>
-
-        <!-- Imagen superpuesta -->
-        <div class="image-overlay" id="imageOverlay">
-            <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
-        </div>
-
-        <!-- Mensaje de carga -->
-        <div class="loading-message" id="loadingMessage">Espere, cargando el servidor...</div>
+    <!-- Imagen superpuesta -->
+    <div class="image-overlay">
+        <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
     </div>
 
-    <script>
-        const imageOverlay = document.getElementById('imageOverlay');
-        const loadingMessage = document.getElementById('loadingMessage');
-
-        // Evento para ocultar la imagen y mostrar el mensaje de carga
-        imageOverlay.addEventListener('click', () => {
-            imageOverlay.classList.add('hidden');
-            loadingMessage.style.display = 'block';
-            setTimeout(() => {
-                loadingMessage.style.display = 'none';
-            }, 5000); // Oculta el mensaje después de 5 segundos
-        });
-    </script>
+    <!-- Visor AR -->
+    <iframe 
+        src="https://mywebar.com/p/Project_10_fntso1carf" 
+        id="arViewer"
+        allow="camera;gyroscope;accelerometer;magnetometer;xr-spatial-tracking;microphone;">
+    </iframe>
 </body>
 </html>
