--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             height: 100vh; /* Ocupa toda la pantalla */
             z-index: 100;
             pointer-events: none; /* Permite clics e interacciones con el contenido detrás */
+            transition: opacity 0.5s ease; /* Transición suave al desaparecer */
+        }
+        .image-overlay.hidden {
+            opacity: 0;
+            pointer-events: none; /* Asegura que no interfiera con los clics después */
         }
         .image-overlay img {
             width: 100%;
@@ -34,7 +39,7 @@
 </head>
 <body>
     <!-- Imagen superpuesta -->
-    <div class="image-overlay">
+    <div class="image-overlay" id="imageOverlay">
         <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=uyqozshe&dl=1" alt="Portada">
     </div>
 
@@ -44,5 +49,21 @@
         id="arViewer"
         allow="camera;gyroscope;accelerometer;magnetometer;xr-spatial-tracking;microphone;">
     </iframe>
+
+    <script>
+        // Selecciona la superposición de la imagen
+        const imageOverlay = document.getElementById('imageOverlay');
+
+        // Funcionalidad para ocultar la imagen después de 12 segundos al tocar la pantalla
+        function hideOverlayAfterTimeout() {
+            setTimeout(() => {
+                imageOverlay.classList.add('hidden');
+            }, 12000); // 12 segundos
+        }
+
+        // Agregar evento al tocar la pantalla o hacer clic
+        document.body.addEventListener('touchstart', hideOverlayAfterTimeout, { once: true });
+        document.body.addEventListener('click', hideOverlayAfterTimeout, { once: true });
+    </script>
 </body>
 </html>
