--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            position: relative; /* Asegura el contexto para posicionar elementos */
         }
         .image-overlay {
             position: absolute;
@@ -16,8 +17,7 @@
             left: 0;
             width: 100%;
             height: 100vh; /* Ocupa toda la pantalla */
-            z-index: 100;
-            pointer-events: none; /* Permite clics e interacciones con el contenido detrás */
+            z-index: 10; /* Asegura que esté sobre el iframe */
             transition: opacity 0.5s ease; /* Transición suave al desaparecer */
         }
         .image-overlay.hidden {
@@ -30,10 +30,13 @@
             object-fit: cover; /* Ajusta la imagen sin distorsionarse */
         }
         iframe {
-            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100vh;
             border: none;
+            z-index: 0; /* Asegura que esté detrás de la superposición */
         }
     </style>
 </head>
