--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <!-- Imagen superpuesta -->
     <div class="image-overlay" id="imageOverlay">
-        <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=uyqozshe&dl=1" alt="Portada">
+        <img src="https://www.dropbox.com/scl/fi/dtmkj33n6kgscjd4uhw9b/Portada-Matena.png?rlkey=87o6d7yzkgw00dco0uehwj3er&st=zqw32k5g&dl=1" alt="Portada">
     </div>
 
     <!-- Visor AR -->
