--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
             padding: 0;
             overflow: hidden;
         }
-        .image-container {
+        .image-overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh; /* Ocupa toda la pantalla */
+            height: 100vh; /* Ocupa toda la pantalla visible */
             z-index: 100;
+            pointer-events: none; /* Permite interacciones con elementos detrás, como el botón "Launch" */
         }
-        .image-container img {
+        .image-overlay img {
             width: 100%;
-            height: 100%; /* Ocupa todo el alto de la pantalla */
-            object-fit: cover; /* Ajusta la imagen sin distorsión */
+            height: auto;
+            max-height: 100vh; /* Ajusta la altura máxima para que se ajuste a la pantalla */
+            object-fit: cover; /* Asegura que la imagen no se deforme */
+            object-position: top; /* Ajusta la posición de la imagen */
         }
         iframe {
             display: block;
@@ -29,12 +32,20 @@
             height: 100vh;
             border: none;
         }
+        .image-overlay.hidden {
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 1s ease;
+        }
     </style>
 </head>
 <body>
-    <div class="image-container" id="imageContainer">
+    <!-- Imagen superpuesta -->
+    <div class="image-overlay" id="imageOverlay">
         <img src="https://www.dropbox.com/scl/fi/dtmkj33n6kgscjd4uhw9b/Portada-Matena.png?rlkey=87o6d7yzkgw00dco0uehwj3er&st=zqw32k5g&dl=1" alt="Portada">
     </div>
+
+    <!-- Visor AR -->
     <iframe 
         src="https://mywebar.com/p/Project_10_fntso1carf" 
         id="arViewer"
@@ -42,10 +53,16 @@
     </iframe>
 
     <script>
-        // Ocultar la imagen después de 8 segundos
-        setTimeout(function() {
-            document.getElementById('imageContainer').style.display = 'none';
-        }, 8000); // 8000 milisegundos = 8 segundos
+        // Detecta cuándo el visor está listo
+        const iframe = document.getElementById('arViewer');
+        const imageOverlay = document.getElementById('imageOverlay');
+
+        iframe.addEventListener('load', () => {
+            // Espera 8 segundos después de aceptar permisos
+            setTimeout(() => {
+                imageOverlay.classList.add('hidden');
+            }, 8000); // 8 segundos
+        });
     </script>
 </body>
 </html>
