--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!-- Imagen superpuesta -->
         <div class="image-overlay" id="imageOverlay">
-            <img src="https://www.dropbox.com/scl/fi/dtmkj33n6kgscjd4uhw9b/Portada-Matena.png?rlkey=87o6d7yzkgw00dco0uehwj3er&st=98bh1epa&dl=1" alt="Portada">
+            <img src="https://www.dropbox.com/scl/fi/lqqhyua0tzhfn6eiafo2d/Portada-Matena.png?rlkey=br8kxvaff9qrnawfnac5dhr6r&st=xdypcwkw&dl=1" alt="Portada">
         </div>
 
         <!-- Mensaje de carga -->
@@ -86,10 +86,14 @@
         const imageOverlay = document.getElementById('imageOverlay');
         const loadingMessage = document.getElementById('loadingMessage');
 
+        // Muestra el mensaje de carga después de 7 segundos
+        setTimeout(() => {
+            loadingMessage.style.display = 'block';
+        }, 7000); // 7 segundos
+
         // Oculta la imagen después de 12 segundos
         setTimeout(() => {
             imageOverlay.classList.add('hidden');
-            loadingMessage.style.display = 'block';
             setTimeout(() => {
                 loadingMessage.style.display = 'none';
             }, 5000); // Oculta el mensaje después de 5 segundos
